--- a/index.html
+++ b/index.html
@@ -10,14 +10,75 @@
     <div class="header">
       <div class="title">
         <img src="resources/images/logo.jpg" alt="My Times logo">
-        <span id="title">My Times</span>
+        <span id="title-text">My Times</span>
       </div>
       <nav>
-        <span><a href="">World</a></span> <!--Come back to these!-->
+        <span><a href="">World</a></span>
         <span><a href="">U.S.</a></span>
         <span><a href="">Tech</a></span>
         <span><a href="">Science</a></span>
       </nav>
+    </div>
+    <div class="main">
+      <div class="column" id="column1">
+        <div id="main-story">
+          <div class="background-image" id="main-head">
+            <h1>Web Developer Refuses to Publish the Right Headlines</h1>
+          </div>
+          <p>SpaceX Settlement, Mars - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+        </div>
+        <div class="sec-stories">
+          <div class="sub-column">
+              <div class="sec-story" id="short-text">
+                <h2>The Newest Political Scandal is Just as Stupid</h2>
+                <p>United States, Again - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+              </div>
+              <div class="sec-story" >
+                <h2 class="background-image" id="world-flat">2018, the Year the World Became Flat</h2>
+              </div>
+          </div>
+          <div class="sub-column">
+            <div class="sec-story" id="short-text">
+              <h2>Revenge for Breakfast: How Early is too Early?</h2>
+              <p>Rome, Italy — Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+            </div>
+            <div class="sec-story">
+              <h2 class="background-image" id="memory-erase">Research Shows Memory Erases Cameras</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column" id="column2">
+          <div class="sec-story" id="long-text">
+            <h2>FBI Accuses FBI of Intelligence</h2>
+            <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+          </div>
+          <div class="sec-story">
+            <h2 class="background-image" id="cat">Cats in Control-You don't care about this</h2>
+            <p></p>
+          </div>
+        </div>
+      <div class="column" id="column3">
+          <img src="resources/images/cookie.png" alt="Bitten cookie">
+          <span id="bites-title">NEWS BITES</span>
+          <div class="news-bites">
+            <span class="bites-head">Cat Emoji Goes Viral</span>
+            <span class="bites-head">Buy Youtube Views</span>
+            <span class="bites-head">Home Business Advertising Ideas</span>
+            <span class="bites-head">Advertising Internet Online</span>
+            <span class="bites-head">Illustration in Marketing Materials</span>
+            <span class="bites-head">Finally a Top Secret Way You Can</span>
+          </div>
+          <h2></h2>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <span>My Times     |</span>
+      <span><a href="">World</a></span>
+      <span><a href="">U.S.</a></span>
+      <span><a href="">Tech</a></span>
+      <span><a href="">Science</a></span>
     </div>
   </body>
 </html>
